# temporal_training

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEVELOPERS.md  Demo_Experiment.ipynb  Example Business Logic.ipynb  LICENSE  README.md  Training_Logic.ipynb  demo_launcher.ipynb  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.ipynb_checkpoints/: Demo_Experiment-checkpoint.ipynb  demo_launcher-checkpoint.ipynb
data_snapshots/glue-sst2-4eb01548de8d2c7f/: data.jsonl  metadata.json
data_snapshots/glue-sst2-93cbdadb2b331a76/: data.jsonl  metadata.json
data_snapshots/glue-sst2-be6aa45f127e8a76/: data.jsonl  metadata.json
data_snapshots/glue-sst2-ca08fadcc9c36a27/: data.jsonl  metadata.json
data_snapshots/imdb-plain_text-7c9cdfcde5ebaa9c/: data.jsonl  metadata.json
data_snapshots/imdb-plain_text-f2200a16e414ec9d/: metadata.json
data_snapshots/scicite-default-d223f6ae824009e2/: data.jsonl  metadata.json
docs/: example-prompts.md  temporal-patterns.md  temporal-primitives.md  testing.md  write-new-workflow.md
src/: conftest.py
src/resources/: test.py
src/resources/myprompts/: history.py  models.py
src/workflows/agents/MAKER_test/: activities.py  agent_types.py  config.py  run.py  worker.py  workflow.py
src/workflows/agents/company_research_agent/: activities.py  run.py  worker.py  workflow.py
src/workflows/agents/multi_agent_demo/: activities.py  agent_types.py  config.py  langchain_version.py  run.py  tools.py  worker.py  workflow.py
src/workflows/agents/streaming_test/: activity.py  starter.py  types.py  worker.py  workflow.py
src/workflows/http/: http_activities.py  http_activities_tests.py  http_workflow.py  http_workflow_tests.py  worker.py
src/workflows/inference/serve_inference/: serve_inference_activities.py  serve_inference_workflow.py  types.py  worker.py
src/workflows/train-tune/bert_finetune/: bert_activities.py  bert_workflow.py  worker.py
src/workflows/train-tune/cifar10_scaleup/: cifar10_activities.py  cifar10_workflow.py  worker.py
src/workflows/train_tune/: PORTFOLIO.md  agents.md
src/workflows/train_tune/bert_checkpointing/: bert_activities.py  custom_types.py  inference.py  starter.py  train.py  worker.py  workflows.py
src/workflows/train_tune/bert_eval/: bert_activities.py  checkpointed_training.py  custom_types.py  evaluate.py  starter.py  training_worker.py  worker.py  workflows.py
src/workflows/train_tune/bert_finetune/: bert_activities.py  bert_workflow.py  custom_types.py  inference.py  train.py  worker.py
src/workflows/train_tune/bert_parallel/: bert_activities.py  custom_types.py  finetune.ipynb  starter.py  training_worker.py  worker.py  workflows.py
src/workflows/train_tune/bert_sweeps/: README.md  bert_activities.py  custom_types.py  starter.py  (+3 more)
(+60 files in other folders)
